// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tag /> render default Tag 1`] = `
.c1 {
  display: inline-block;
  width: auto;
  margin-bottom: 1.6rem;
  color: #4d73b8;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-color: #7994d4;
  border-style: solid;
  border-radius: 0.6rem;
  box-shadow: none;
  cursor: pointer;
}

.c1 + .c0 {
  margin-left: 1.6rem;
}

.c2 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem 1.6rem;
  text-align: left;
}

@media (max-width:600px) {
  .c1 {
    width: 100%;
  }

  .c1 + .c0 {
    margin-left: 0;
  }
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      Default content
    </div>
  </div>
</div>
`;

exports[`<Tag /> render primary tag 1`] = `
.c3 + .c0 {
  margin-left: 1.6rem;
}

.c1 {
  display: inline-block;
  width: auto;
  margin-bottom: 1.6rem;
  color: #4d73b8;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-color: #f66663;
  border-style: solid;
  border-radius: 0.6rem;
  box-shadow: none;
  cursor: pointer;
}

.c1 + .c0 {
  margin-left: 1.6rem;
}

.c2 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem 1.6rem;
  text-align: left;
}

@media (max-width:600px) {
  .c3 + .c0 {
    margin-left: 0;
  }
}

@media (max-width:600px) {
  .c1 {
    width: 100%;
  }

  .c1 + .c0 {
    margin-left: 0;
  }
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      primary
       content
    </div>
  </div>
</div>
`;

exports[`<Tag /> render secondary tag 1`] = `
.c1 {
  display: inline-block;
  width: auto;
  margin-bottom: 1.6rem;
  color: #4d73b8;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-color: #7994d4;
  border-style: solid;
  border-radius: 0.6rem;
  box-shadow: none;
  cursor: pointer;
}

.c1 + .c0 {
  margin-left: 1.6rem;
}

.c3 + .c0 {
  margin-left: 1.6rem;
}

.c2 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem 1.6rem;
  text-align: left;
}

@media (max-width:600px) {
  .c1 {
    width: 100%;
  }

  .c1 + .c0 {
    margin-left: 0;
  }
}

@media (max-width:600px) {
  .c3 + .c0 {
    margin-left: 0;
  }
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      secondary
       content
    </div>
  </div>
</div>
`;
